@@ -10,6 +10,8 @@ Version 1.3.13+svn:
   * Multiplayer
     * Revised maps: Den of Onis, Weldyn Channel.
     * MP campaign gold carry over works properly now.
+    * MP campaign start of scenario saves can be loaded again.
+    * If a MP side has no colour defined fall back to the default side colour.
 
   * User interface
     * The apple key works as shortcut modifier again.
