@@ -27,6 +27,8 @@ Version 1.3.13+svn:
    * :droid can now use the additional parameters on & off to enable/disable
      the AI status of a side instead of toggle it (FR #9676)
    * fixed the MP campaign gold carry over (bug #10677)
+   * MP campaign start of scenario saves can be loaded again (bug #10058)
+   * if a MP side has no colour defined fall back to the default side colour
  * sound:
    * timer bell in MP starts when there are 20 seconds left and fades in
      gradually for 10 seconds (fr #10559)
